work with author curd methods in api
